[gd_scene load_steps=12 format=2]

[ext_resource path="res://Throws.gd" type="Script" id=1]
[ext_resource path="res://Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Ground.tscn" type="PackedScene" id=3]
[ext_resource path="res://ThrowCanvas.tscn" type="PackedScene" id=4]
[ext_resource path="res://Camera.gd" type="Script" id=5]
[ext_resource path="res://Disc.tscn" type="PackedScene" id=6]
[ext_resource path="res://Disc.gd" type="Script" id=7]
[ext_resource path="res://DebugLayer.gd" type="Script" id=8]
[ext_resource path="res://Line2D.gd" type="Script" id=9]
[ext_resource path="res://Button.gd" type="Script" id=10]

[sub_resource type="Curve3D" id=1]
_data = {
"points": PoolVector3Array( 0, 0, 0, 0, 0, 0, 6.06983, 0.374939, -3.82249, 0, 0, 0, 0, 0, 0, 6.06983, 0.374939, -3.82249, 0, 0, 0, 0, 0, 0, 13.317, 9.06709, -10.4333, 0, 0, 0, 0, 0, 0, 10.1172, 0.706774, -14.8083 ),
"tilts": PoolRealArray( 0, 0, 0, 0 )
}

[node name="Throws" type="Spatial"]
script = ExtResource( 1 )

[node name="Player" parent="." instance=ExtResource( 2 )]
transform = Transform( -2, 0, 1.74846e-07, 0, 2, 0, -1.74846e-07, 0, -2, -6.58415, 0, 0 )
max_speed = 10
acceleration = 6
deceleration = 10

[node name="Ground" parent="." instance=ExtResource( 3 )]
transform = Transform( 100, 0, 0, 0, 0.1, 0, 0, 0, 100, 0, 0, -30.5 )

[node name="ThrowCanvas" parent="." instance=ExtResource( 4 )]

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.707106, 0.707106, 0, -0.707106, 0.707106, 0, 30, 15 )
far = 511.8
script = ExtResource( 5 )

[node name="Path" type="Path" parent="."]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0.636 )
curve = SubResource( 1 )

[node name="PathFollow" type="PathFollow" parent="Path"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0 )
rotation_mode = 0
loop = false

[node name="Disc" parent="Path/PathFollow" instance=ExtResource( 6 )]
transform = Transform( 0.6, 0, 0, 0, 0.6, 0, 0, 0, 0.6, 0, 0, 0 )
script = ExtResource( 7 )

[node name="DebugLayer" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 8 )

[node name="Label" type="Label" parent="DebugLayer"]
margin_top = -0.0524092
margin_right = 40.0
margin_bottom = 13.9476

[node name="Line2D" type="Node2D" parent="DebugLayer"]
script = ExtResource( 9 )

[node name="Button" type="Button" parent="DebugLayer"]
margin_right = 200.0
margin_bottom = 200.0
script = ExtResource( 10 )

[node name="DebugPaths" type="Spatial" parent="."]
[connection signal="pan_camera" from="ThrowCanvas" to="Camera" method="_on_ThrowCanvas_pan_camera"]
[connection signal="pan_start" from="ThrowCanvas" to="Camera" method="_on_ThrowCanvas_pan_start"]
[connection signal="throw" from="ThrowCanvas" to="Path/PathFollow/Disc" method="_on_ThrowCanvas_throw"]
[connection signal="position_update" from="Path/PathFollow/Disc" to="Camera" method="_on_Disc_position_update"]
[connection signal="position_update" from="Path/PathFollow/Disc" to="DebugLayer" method="_on_Disc_position_update"]
[connection signal="throw_complete" from="Path/PathFollow/Disc" to="Camera" method="_on_Disc_throw_complete"]
[connection signal="button_up" from="DebugLayer/Button" to="Player" method="_on_Button_button_up"]
